--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap');
 .page {
   display: flex;
   flex-direction: row;
