--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,3 +6,7 @@
   display: flex;
   flex-direction: row;
 }
+
+.main_button {
+  @apply bg-blue-500 h-full hover:bg-blue-600 text-white h-16 ml-4;
+}
