added index page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,7 +11,7 @@
 }
 
 .appointments_list_max_height {
-  max-height: 30.5rem;
+  height: 30.5rem;
 
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none;  /* IE and Edge */
