--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,7 +10,7 @@
   @apply flex flex-col items-center w-4/5 ml-16;
 }
 
-.appointments_list_max_height {
+.appointments_list_max_height, .analyses_list_max_height {
   height: 30.5rem;
 
   /* Hide scrollbar for IE, Edge and Firefox */
@@ -20,7 +20,7 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.appointments_list_max_height::-webkit-scrollbar {
+.appointments_list_max_height::-webkit-scrollbar, .analyses_list_max_height::-webkit-scrollbar {
   display: none;
 }
 
@@ -28,7 +28,11 @@
   @apply flex flex-col bg-blue-100 w-80 p-4 rounded-lg;
 
   .input_field {
-    @apply mb-4 h-12 rounded-lg;
+    @apply mb-4 h-12 rounded-lg p-2;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
