--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,9 +10,7 @@
   @apply flex flex-col items-center w-4/5 ml-16;
 }
 
-.appointments_list_max_height, .analyses_list_max_height {
-  height: 30.5rem;
-
+.hide_scroll {
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -20,7 +18,7 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.appointments_list_max_height::-webkit-scrollbar, .analyses_list_max_height::-webkit-scrollbar {
+.hide_scroll::-webkit-scrollbar {
   display: none;
 }
 
