--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,7 +25,7 @@
 }
 
 .user_form_column {
-  @apply flex flex-col bg-blue-100 w-80 p-4 rounded-lg;
+  @apply flex flex-col bg-blue-100 w-80 rounded-lg;
 
   .input_field {
     @apply mb-4 h-12 rounded-lg p-2;
@@ -33,6 +33,26 @@
     &:focus {
       outline: none;
     }
+  }
+}
+
+.fill_form_column {
+  @apply flex flex-row justify-center bg-blue-100 w-full h-48 p-4 rounded-lg;
+
+  .input_field {
+    @apply flex flex-col justify-between w-full h-full rounded-lg p-2;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.input_field {
+  @apply flex flex-row mb-4 h-20 rounded-lg p-2;
+
+  &:focus {
+    outline: none;
   }
 }
 
