--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,7 +23,7 @@
 }
 
 .user_form_column {
-  @apply flex flex-col bg-blue-100 w-80 p-4 rounded-lg;
+  @apply flex flex-col bg-blue-100 w-80 p-4 rounded-lg h-full justify-between;
 
   .input_field {
     @apply mb-4 h-12 rounded-lg p-2;
